force-app/main/default/objects/Promocion__c/fields/Gimnasio_m2__c.field-meta.xml
<CustomField>
    <fullName>Gimnasio_m2__c</fullName>
    <label>Gimnasio m2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>