force-app/main/default/objects/Promocion__c/fields/Golf__c.field-meta.xml
<CustomField>
    <fullName>Golf__c</fullName>
    <label>Golf</label>
    <type>Url</type>
</CustomField>