force-app/main/default/objects/Promocion__c/fields/Guarderias__c.field-meta.xml
<CustomField>
    <fullName>Guarderias__c</fullName>
    <label>Guarderías</label>
    <type>Url</type>
</CustomField>