force-app/main/default/objects/Promocion__c/fields/Hammam__c.field-meta.xml
<CustomField>
    <fullName>Hammam__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hammam</label>
    <type>Checkbox</type>
</CustomField>