force-app/main/default/objects/Promocion__c/fields/Hospitales__c.field-meta.xml
<CustomField>
    <fullName>Hospitales__c</fullName>
    <label>Hospitales</label>
    <type>Url</type>
</CustomField>