force-app/main/default/objects/Promocion__c/fields/IdPromocionBabonlab__c.field-meta.xml
<CustomField>
    <fullName>IdPromocionBabonlab__c</fullName>
    <externalId>true</externalId>
    <label>IdPromocionBabonlab</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>