force-app/main/default/objects/Promocion__c/fields/Importe_Cuota_Extra__c.field-meta.xml
<CustomField>
    <fullName>Importe_Cuota_Extra__c</fullName>
    <label>Importe Cuota Extra</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>