force-app/main/default/objects/Promocion__c/fields/Importe_de_ventas__c.field-meta.xml
<CustomField>
    <fullName>Importe_de_ventas__c</fullName>
    <label>Importe de ventas</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>