force-app/main/default/objects/Promocion__c/fields/ImporteAportacionCapital__c.field-meta.xml
<CustomField>
    <fullName>ImporteAportacionCapital__c</fullName>
    <label>Importe aportación capital</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>