force-app/main/default/objects/Promocion__c/fields/Informacion_de_arquitectos_de_obra__c.field-meta.xml
<CustomField>
    <fullName>Informacion_de_arquitectos_de_obra__c</fullName>
    <label>Información de arquitectos de obra</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>