force-app/main/default/objects/Promocion__c/fields/Inicio_comercializacion_prevista__c.field-meta.xml
<CustomField>
    <fullName>Inicio_comercializacion_prevista__c</fullName>
    <label>Inicio de comercialización prevista</label>
    <type>Date</type>
</CustomField>