force-app/main/default/objects/Promocion__c/fields/Inicio_de_comercializaci_n_real__c.field-meta.xml
<CustomField>
    <fullName>Inicio_de_comercializaci_n_real__c</fullName>
    <label>Inicio de Comercialización</label>
    <type>Date</type>
</CustomField>