force-app/main/default/objects/Promocion__c/fields/Inicio_de_escrituraciones__c.field-meta.xml
<CustomField>
    <fullName>Inicio_de_escrituraciones__c</fullName>
    <label>Inicio de escrituraciones</label>
    <type>Date</type>
</CustomField>