force-app/main/default/objects/Promocion__c/fields/Inicio_de_Pre_Comercializacion__c.field-meta.xml
<CustomField>
    <fullName>Inicio_de_Pre_Comercializacion__c</fullName>
    <label>Inicio de Pre- Comercialización</label>
    <type>Date</type>
</CustomField>