force-app/main/default/objects/Promocion__c/fields/Inmuebles_de_la_promocion__c.field-meta.xml
<CustomField>
    <fullName>Inmuebles_de_la_promocion__c</fullName>
    <formula>LEFT($Api.Partner_Server_URL_460, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_460))+&quot;lightning/r/&quot;+Id+&quot;/related/Productos__r/view&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inmuebles de la promocion</label>
    <type>Text</type>
</CustomField>