force-app/main/default/objects/Promocion__c/fields/Jardines__c.field-meta.xml
<CustomField>
    <fullName>Jardines__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Jardines</label>
    <type>Checkbox</type>
</CustomField>