force-app/main/default/objects/Promocion__c/fields/Jardines_m2__c.field-meta.xml
<CustomField>
    <fullName>Jardines_m2__c</fullName>
    <label>Jardines m2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>