force-app/main/default/objects/Promocion__c/fields/Last_Submitter__c.field-meta.xml
<CustomField>
    <fullName>Last_Submitter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Submitter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Promociones7</relationshipName>
    <type>Lookup</type>
</CustomField>