force-app/main/default/objects/Promocion__c/fields/Libro__c.field-meta.xml
<CustomField>
    <fullName>Libro__c</fullName>
    <label>Libro</label>
    <length>50</length>
    <type>Text</type>
</CustomField>