force-app/main/default/objects/Promocion__c/fields/Link_democode_Promocion__c.field-meta.xml
<CustomField>
    <fullName>Link_democode_Promocion__c</fullName>
    <formula>HYPERLINK(&quot;http://democode.es/avintiainmobiliaria/node/&quot;+Nodo_Web_Avintia__c , &quot;http://democode.es/avintiainmobiliaria/node/&quot;+Nodo_Web_Avintia__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link democode Promoción</label>
    <type>Text</type>
</CustomField>