force-app/main/default/objects/Promocion__c/fields/Link_video_promocion__c.field-meta.xml
<CustomField>
    <fullName>Link_video_promocion__c</fullName>
    <label>Link promoción</label>
    <type>Url</type>
</CustomField>