force-app/main/default/objects/Promocion__c/fields/Localidad__c.field-meta.xml
<CustomField>
    <fullName>Localidad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Localidad</label>
    <referenceTo>Municipio__c</referenceTo>
    <relationshipLabel>Promociones</relationshipLabel>
    <relationshipName>Promociones</relationshipName>
    <type>Lookup</type>
</CustomField>