force-app/main/default/objects/Promocion__c/fields/Localizacion_Google__c.field-meta.xml
<CustomField>
    <fullName>Localizacion_Google__c</fullName>
    <label>Localización Google</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>