force-app/main/default/objects/Promocion__c/fields/Lugar_de_la_notaria__c.field-meta.xml
<CustomField>
    <fullName>Lugar_de_la_notaria__c</fullName>
    <label>Lugar de la notaría</label>
    <type>TextArea</type>
</CustomField>