force-app/main/default/objects/Promocion__c/fields/Lugar_del_registro__c.field-meta.xml
<CustomField>
    <fullName>Lugar_del_registro__c</fullName>
    <label>Lugar del registro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>