force-app/main/default/objects/Promocion__c/fields/Marketing__c.field-meta.xml
<CustomField>
    <fullName>Marketing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marketing</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>1</booleanFilter>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Marketing</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Promociones3</relationshipName>
    <type>Lookup</type>
</CustomField>