force-app/main/default/objects/Promocion__c/fields/Mercados__c.field-meta.xml
<CustomField>
    <fullName>Mercados__c</fullName>
    <label>Mercados</label>
    <type>Url</type>
</CustomField>