force-app/main/default/objects/Promocion__c/fields/Metros__c.field-meta.xml
<CustomField>
    <fullName>Metros__c</fullName>
    <label>Metros</label>
    <type>Url</type>
</CustomField>