force-app/main/default/objects/Promocion__c/fields/Mostrar_Fecha_de_Escritura__c.field-meta.xml
<CustomField>
    <fullName>Mostrar_Fecha_de_Escritura__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Campo para mostrar la fecha de escrituración en la plantilla de Pre-Reserva que se entrega al cliente</inlineHelpText>
    <label>Mostrar Fecha de Escritura</label>
    <type>Checkbox</type>
</CustomField>