force-app/main/default/objects/Promocion__c/fields/N_Ascensores__c.field-meta.xml
<CustomField>
    <fullName>N_Ascensores__c</fullName>
    <label>Nº Ascensores</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>