force-app/main/default/objects/Promocion__c/fields/N_Dias_Inmueble_Apalabrado__c.field-meta.xml
<CustomField>
    <fullName>N_Dias_Inmueble_Apalabrado__c</fullName>
    <defaultValue>2</defaultValue>
    <inlineHelpText>Nº de días máximo que el inmueble puede estar &quot;Apalabrado&quot;, sin haber recibido el pago de la reserva.</inlineHelpText>
    <label>Nº Días Inmueble  &quot;Apalabrado&quot;</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>