force-app/main/default/objects/Promocion__c/fields/N_Garages_permutas__c.field-meta.xml
<CustomField>
    <fullName>N_Garages_permutas__c</fullName>
    <label>Nº Garajes permutas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>