force-app/main/default/objects/Promocion__c/fields/N_intentos_contacto_lead__c.field-meta.xml
<CustomField>
    <fullName>N_intentos_contacto_lead__c</fullName>
    <defaultValue>3</defaultValue>
    <label>Nº intentos de contacto con lead</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>