force-app/main/default/objects/Promocion__c/fields/N_intentos_Visita__c.field-meta.xml
<CustomField>
    <fullName>N_intentos_Visita__c</fullName>
    <defaultValue>3</defaultValue>
    <label>Nº Intentos Visita</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>