force-app/main/default/objects/Promocion__c/fields/N_Locales_totales_promocion__c.field-meta.xml
<CustomField>
    <fullName>N_Locales_totales_promocion__c</fullName>
    <label>Nº Locales totales de la promoción</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>