force-app/main/default/objects/Promocion__c/fields/N_Plantas__c.field-meta.xml
<CustomField>
    <fullName>N_Plantas__c</fullName>
    <label>Nº Plantas</label>
    <type>TextArea</type>
</CustomField>