force-app/main/default/objects/Promocion__c/fields/N_Portales__c.field-meta.xml
<CustomField>
    <fullName>N_Portales__c</fullName>
    <label>Nº Portales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>