force-app/main/default/objects/Promocion__c/fields/N_Trasteros_vinculados__c.field-meta.xml
<CustomField>
    <fullName>N_Trasteros_vinculados__c</fullName>
    <label>Nº Trasteros vinculados</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>