force-app/main/default/objects/Promocion__c/fields/N_Unidades_iniciales_ritmo_de_ventas__c.field-meta.xml
<CustomField>
    <fullName>N_Unidades_iniciales_ritmo_de_ventas__c</fullName>
    <inlineHelpText>Indica el Número de Unidades a vender la primera semana.</inlineHelpText>
    <label>Nº Unidades iniciales ritmo de ventas</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>