force-app/main/default/objects/Promocion__c/fields/Ncuentabancariahipoteca__c.field-meta.xml
<CustomField>
    <fullName>Ncuentabancariahipoteca__c</fullName>
    <label>Nº cuenta bancaria hipoteca</label>
    <length>30</length>
    <type>Text</type>
</CustomField>