force-app/main/default/objects/Promocion__c/fields/Nodo_Web_Avintia__c.field-meta.xml
<CustomField>
    <fullName>Nodo_Web_Avintia__c</fullName>
    <label>Nodo Web Avintia</label>
    <length>20</length>
    <type>Text</type>
</CustomField>