force-app/main/default/objects/Promocion__c/fields/Nombre_Comercial_Avintia_Inmobiliaria__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Comercial_Avintia_Inmobiliaria__c</fullName>
    <label>Nombre Comercial Avintia Inmobiliaria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>