force-app/main/default/objects/Promocion__c/fields/nombre_promocion__c.field-meta.xml
<CustomField>
    <fullName>nombre_promocion__c</fullName>
    <label>Nombre de la promocion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>