force-app/main/default/objects/Promocion__c/fields/Numero_Cuotas_Extra__c.field-meta.xml
<CustomField>
    <fullName>Numero_Cuotas_Extra__c</fullName>
    <label>Número Cuotas Extra</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>