force-app/main/default/objects/Promocion__c/fields/Numero_de_cuenta_bancaria_1__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_cuenta_bancaria_1__c</fullName>
    <description>Lo incluye Tesorería después de dar de alta la promoción. Si hay cambios los actualiza</description>
    <label>Número de cuenta bancaria 1</label>
    <length>24</length>
    <type>Text</type>
</CustomField>