force-app/main/default/objects/Promocion__c/fields/Numero_de_cuenta_bancaria_2__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_cuenta_bancaria_2__c</fullName>
    <label>Número de cuenta bancaria 2</label>
    <length>24</length>
    <type>Text</type>
</CustomField>