force-app/main/default/objects/Promocion__c/fields/Objetivo_de_ventas__c.field-meta.xml
<CustomField>
    <fullName>Objetivo_de_ventas__c</fullName>
    <label>Porcentaje Hito Promotor</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>