force-app/main/default/objects/Promocion__c/fields/Objetivo_importe__c.field-meta.xml
<CustomField>
    <fullName>Objetivo_importe__c</fullName>
    <label>Objetivo importe</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>