force-app/main/default/objects/Promocion__c/fields/Objetivo_unidades__c.field-meta.xml
<CustomField>
    <fullName>Objetivo_unidades__c</fullName>
    <label>Objetivo unidades</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>