force-app/main/default/objects/Promocion__c/fields/Obra__c.field-meta.xml
<CustomField>
    <fullName>Obra__c</fullName>
    <label>Código Obra</label>
    <length>25</length>
    <type>Text</type>
</CustomField>