force-app/main/default/objects/Promocion__c/fields/Padel__c.field-meta.xml
<CustomField>
    <fullName>Padel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Padel</label>
    <type>Checkbox</type>
</CustomField>