force-app/main/default/objects/Promocion__c/fields/Padel_m2__c.field-meta.xml
<CustomField>
    <fullName>Padel_m2__c</fullName>
    <label>Padel m2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>