force-app/main/default/objects/Promocion__c/fields/Parques__c.field-meta.xml
<CustomField>
    <fullName>Parques__c</fullName>
    <label>Parques</label>
    <type>Url</type>
</CustomField>