force-app/main/default/objects/Promocion__c/fields/Pendiente_de_aprobacion_de_tarifario__c.field-meta.xml
<CustomField>
    <fullName>Pendiente_de_aprobacion_de_tarifario__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check que se marca y se desmarca cuando se inicial el approval process de tarifario. Se utiliza para conocer si está en proceso de aprobación del tarifario</description>
    <inlineHelpText>Indica si el tarifario se encuentra en proceso de aprobación</inlineHelpText>
    <label>Pendiente de aprobacion de tarifario</label>
    <type>Checkbox</type>
</CustomField>