force-app/main/default/objects/Promocion__c/fields/Periodo_de_Reserva__c.field-meta.xml
<CustomField>
    <fullName>Periodo_de_Reserva__c</fullName>
    <inlineHelpText>Campo que indica el número de días del periodo de reserva</inlineHelpText>
    <label>Periodo de Reserva</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>