force-app/main/default/objects/Promocion__c/fields/Piscina_Exterior__c.field-meta.xml
<CustomField>
    <fullName>Piscina_Exterior__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Piscina Exterior</label>
    <type>Checkbox</type>
</CustomField>