force-app/main/default/objects/Promocion__c/fields/Piscina_Exterior_m2__c.field-meta.xml
<CustomField>
    <fullName>Piscina_Exterior_m2__c</fullName>
    <label>Piscina Exterior m2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>