force-app/main/default/objects/Promocion__c/fields/Piscina_Infantil__c.field-meta.xml
<CustomField>
    <fullName>Piscina_Infantil__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Piscina Infantil</label>
    <type>Checkbox</type>
</CustomField>