force-app/main/default/objects/Promocion__c/fields/Pisos_Libres__c.field-meta.xml
<CustomField>
    <fullName>Pisos_Libres__c</fullName>
    <label>Pisos Libres</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>