force-app/main/default/objects/Promocion__c/fields/Pistas_deportivas__c.field-meta.xml
<CustomField>
    <fullName>Pistas_deportivas__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pistas deportivas</label>
    <type>Checkbox</type>
</CustomField>