force-app/main/default/objects/Promocion__c/fields/Pistas_deportivas_m2__c.field-meta.xml
<CustomField>
    <fullName>Pistas_deportivas_m2__c</fullName>
    <label>Pistas deportivas m2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>