force-app/main/default/objects/Promocion__c/fields/Planificacion__c.field-meta.xml
<CustomField>
    <fullName>Planificacion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Planificación</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Planificación</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Promociones1</relationshipName>
    <type>Lookup</type>
</CustomField>