force-app/main/default/objects/Promocion__c/fields/Plantilla_cancelacion_compraventa__c.field-meta.xml
<CustomField>
    <fullName>Plantilla_cancelacion_compraventa__c</fullName>
    <label>Plantilla cancelación contrato CV</label>
    <length>50</length>
    <type>Text</type>
</CustomField>