force-app/main/default/objects/Promocion__c/fields/Plantilla_cancelacion_reserva__c.field-meta.xml
<CustomField>
    <fullName>Plantilla_cancelacion_reserva__c</fullName>
    <description>Antiguo Default Value	&quot;ModeloResolucionReservaVivienda&quot;</description>
    <label>Plantilla cancelación contrato reserva</label>
    <length>50</length>
    <type>Text</type>
</CustomField>