force-app/main/default/objects/Promocion__c/fields/Plantilla_contrato_CV_No_Vivienda__c.field-meta.xml
<CustomField>
    <fullName>Plantilla_contrato_CV_No_Vivienda__c</fullName>
    <defaultValue>&quot;VF_Doc_contrato_compraventa_No_Asociado&quot;</defaultValue>
    <label>Plantilla contrato CV No Vivienda</label>
    <length>50</length>
    <type>Text</type>
</CustomField>