force-app/main/default/objects/Promocion__c/fields/Plantilla_de_adenda__c.field-meta.xml
<CustomField>
    <fullName>Plantilla_de_adenda__c</fullName>
    <defaultValue>&quot;VF_Documento_adenda&quot;</defaultValue>
    <label>Plantilla de adenda</label>
    <length>50</length>
    <type>Text</type>
</CustomField>