force-app/main/default/objects/Promocion__c/fields/Plantilla_de_contrato_de_compraventa__c.field-meta.xml
<CustomField>
    <fullName>Plantilla_de_contrato_de_compraventa__c</fullName>
    <defaultValue>&quot;VF_Documento_contrato_compraventa&quot;</defaultValue>
    <label>Plantilla de contrato de compraventa</label>
    <length>50</length>
    <type>Text</type>
</CustomField>