force-app/main/default/objects/Promocion__c/fields/Plantilla_de_contrato_de_compraventa_VPO__c.field-meta.xml
<CustomField>
    <fullName>Plantilla_de_contrato_de_compraventa_VPO__c</fullName>
    <description>Antiguo Default Value	&quot;VF_Documento_contrato_compraventa_VPO&quot;</description>
    <label>Plantilla de contrato de compraventa VPO</label>
    <length>50</length>
    <type>Text</type>
</CustomField>