force-app/main/default/objects/Promocion__c/fields/Plantilla_de_contrato_de_compraventa_VPT__c.field-meta.xml
<CustomField>
    <fullName>Plantilla_de_contrato_de_compraventa_VPT__c</fullName>
    <defaultValue>&quot;VF_Documento_contrato_compraventa_VPT&quot;</defaultValue>
    <label>Plantilla de contrato de compraventa VPT</label>
    <length>50</length>
    <type>Text</type>
</CustomField>