force-app/main/default/objects/Promocion__c/fields/Plantilla_de_contrato_de_reserva__c.field-meta.xml
<CustomField>
    <fullName>Plantilla_de_contrato_de_reserva__c</fullName>
    <description>Antiguo Default Value: &quot;VF_Documento_reserva&quot;</description>
    <label>Plantilla de contrato de reserva</label>
    <length>50</length>
    <type>Text</type>
</CustomField>