force-app/main/default/objects/Promocion__c/fields/Plantilla_de_escrituracion__c.field-meta.xml
<CustomField>
    <fullName>Plantilla_de_escrituracion__c</fullName>
    <defaultValue>&quot;Ficha_Escrituracion&quot;</defaultValue>
    <label>Plantilla de escrituración</label>
    <length>50</length>
    <type>Text</type>
</CustomField>