force-app/main/default/objects/Promocion__c/fields/Plantilla_de_pre_reserva__c.field-meta.xml
<CustomField>
    <fullName>Plantilla_de_pre_reserva__c</fullName>
    <defaultValue>&quot;VF_Ficha_Forma_pago&quot;</defaultValue>
    <label>Plantilla de pre-reserva</label>
    <length>50</length>
    <type>Text</type>
</CustomField>