force-app/main/default/objects/Promocion__c/fields/PlantillaAdenda__c.field-meta.xml
<CustomField>
    <fullName>PlantillaAdenda__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plantilla de adenda</label>
    <referenceTo>APXTConga4__Conga_Template__c</referenceTo>
    <relationshipLabel>Promociones (Plantilla de adenda)</relationshipLabel>
    <relationshipName>Promociones9</relationshipName>
    <type>Lookup</type>
</CustomField>