force-app/main/default/objects/Promocion__c/fields/PlantillaCancelacionContrato_CV__c.field-meta.xml
<CustomField>
    <fullName>PlantillaCancelacionContrato_CV__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plantilla cancelación contrato CV</label>
    <referenceTo>APXTConga4__Conga_Template__c</referenceTo>
    <relationshipLabel>Promociones (Plantilla cancelación contrato CV)</relationshipLabel>
    <relationshipName>Promociones7</relationshipName>
    <type>Lookup</type>
</CustomField>