force-app/main/default/objects/Promocion__c/fields/PlantillaCancelacionContratoReserva__c.field-meta.xml
<CustomField>
    <fullName>PlantillaCancelacionContratoReserva__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plantilla cancelación contrato reserva</label>
    <referenceTo>APXTConga4__Conga_Template__c</referenceTo>
    <relationshipLabel>Promociones (Plantilla cancelación contrato reserva)</relationshipLabel>
    <relationshipName>Promociones6</relationshipName>
    <type>Lookup</type>
</CustomField>