force-app/main/default/objects/Promocion__c/fields/PlantillaContrato_CV_No_Vivienda__c.field-meta.xml
<CustomField>
    <fullName>PlantillaContrato_CV_No_Vivienda__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plantilla contrato CV No Vivienda</label>
    <referenceTo>APXTConga4__Conga_Template__c</referenceTo>
    <relationshipLabel>Promociones (Plantilla contrato CV No Vivienda)</relationshipLabel>
    <relationshipName>Promociones4</relationshipName>
    <type>Lookup</type>
</CustomField>