force-app/main/default/objects/Promocion__c/fields/PlantillaContratoCompraventa__c.field-meta.xml
<CustomField>
    <fullName>PlantillaContratoCompraventa__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plantilla de contrato de compraventa</label>
    <referenceTo>APXTConga4__Conga_Template__c</referenceTo>
    <relationshipLabel>Promociones (Plantilla de contrato de compraventa)</relationshipLabel>
    <relationshipName>Promociones2</relationshipName>
    <type>Lookup</type>
</CustomField>