force-app/main/default/objects/Promocion__c/fields/PlantillaContratoCompraventa_VPO__c.field-meta.xml
<CustomField>
    <fullName>PlantillaContratoCompraventa_VPO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plantilla de contrato de compraventa VPO</label>
    <referenceTo>APXTConga4__Conga_Template__c</referenceTo>
    <relationshipLabel>Promociones (Plantilla de contrato de compraventa VPO)</relationshipLabel>
    <relationshipName>Promociones3</relationshipName>
    <type>Lookup</type>
</CustomField>