force-app/main/default/objects/Promocion__c/fields/PlantillaContratoCompraventa_VPT__c.field-meta.xml
<CustomField>
    <fullName>PlantillaContratoCompraventa_VPT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plantilla de contrato de compraventa VPT</label>
    <referenceTo>APXTConga4__Conga_Template__c</referenceTo>
    <relationshipLabel>Promociones (Plantilla de contrato de compraventa VPT)</relationshipLabel>
    <relationshipName>Promociones8</relationshipName>
    <type>Lookup</type>
</CustomField>