force-app/main/default/objects/Promocion__c/fields/PlantillaContratoReserva__c.field-meta.xml
<CustomField>
    <fullName>PlantillaContratoReserva__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plantilla de contrato de reserva</label>
    <referenceTo>APXTConga4__Conga_Template__c</referenceTo>
    <relationshipLabel>Promociones (Plantilla de contrato de reserva)</relationshipLabel>
    <relationshipName>Promociones1</relationshipName>
    <type>Lookup</type>
</CustomField>