force-app/main/default/objects/Promocion__c/fields/PlantillaEscrituracion__c.field-meta.xml
<CustomField>
    <fullName>PlantillaEscrituracion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plantilla de escrituración</label>
    <referenceTo>APXTConga4__Conga_Template__c</referenceTo>
    <relationshipLabel>Promociones (Plantilla de escrituración)</relationshipLabel>
    <relationshipName>Promociones5</relationshipName>
    <type>Lookup</type>
</CustomField>