force-app/main/default/objects/Promocion__c/fields/PlantillaPrereserva__c.field-meta.xml
<CustomField>
    <fullName>PlantillaPrereserva__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plantilla de pre-reserva</label>
    <referenceTo>APXTConga4__Conga_Template__c</referenceTo>
    <relationshipLabel>Promociones</relationshipLabel>
    <relationshipName>Promociones</relationshipName>
    <type>Lookup</type>
</CustomField>