force-app/main/default/objects/Promocion__c/fields/Playas__c.field-meta.xml
<CustomField>
    <fullName>Playas__c</fullName>
    <label>Playas</label>
    <type>Url</type>
</CustomField>