force-app/main/default/objects/Promocion__c/fields/Plaza_de_Garaje_Parking__c.field-meta.xml
<CustomField>
    <fullName>Plaza_de_Garaje_Parking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Plaza de Garaje/Parking</label>
    <type>Checkbox</type>
</CustomField>