force-app/main/default/objects/Promocion__c/fields/Ponderacion__c.field-meta.xml
<CustomField>
    <fullName>Ponderacion__c</fullName>
    <label>Ponderación</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>