force-app/main/default/objects/Promocion__c/fields/Ponderacion_objetivo_acumulado_ud_ventas__c.field-meta.xml
<CustomField>
    <fullName>Ponderacion_objetivo_acumulado_ud_ventas__c</fullName>
    <label>Ponderación objetivo acumulado ud ventas</label>
    <summarizedField>Ritmo_ventas__c.Ponderacion_objetivo_ud_ventas__c</summarizedField>
    <summaryForeignKey>Ritmo_ventas__c.Promocion__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>