force-app/main/default/objects/Promocion__c/fields/Ponderacion_real_acumulado_ud_ventas__c.field-meta.xml
<CustomField>
    <fullName>Ponderacion_real_acumulado_ud_ventas__c</fullName>
    <label>Ponderación real acumulado ud ventas</label>
    <summarizedField>Ritmo_ventas__c.Ponderacion_real_ud_ventas__c</summarizedField>
    <summaryForeignKey>Ritmo_ventas__c.Promocion__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>