force-app/main/default/objects/Promocion__c/fields/Porcentaje_pago_escritura__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_pago_escritura__c</fullName>
    <defaultValue>0.8</defaultValue>
    <label>Porcentaje pago escritura</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>