force-app/main/default/objects/Promocion__c/fields/Porcentaje_Pago_Firma_Contrato__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_Pago_Firma_Contrato__c</fullName>
    <defaultValue>0.1</defaultValue>
    <label>Porcentaje Pago Firma Contrato</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>