force-app/main/default/objects/Promocion__c/fields/Porcentaje_pago_reserva__c.field-meta.xml
<CustomField>
    <fullName>Porcentaje_pago_reserva__c</fullName>
    <defaultValue>0.1</defaultValue>
    <label>Porcentaje pago reserva</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>